Modify markup semantics for accessibility issues

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,17 +1,17 @@
 :root {
-    --clr-neutral-100: hsl(0, 0%, 100%);
-    --clr-neutral-200: hsl(212, 45%, 89%);
-    --clr-blue-200: hsl(220, 15%, 55%);
-    --clr-blue-800: hsl(218, 44%, 22%);
-    --fw-400: 400;
-    --fw-700: 700;
+  --clr-neutral-100: hsl(0, 0%, 100%);
+  --clr-neutral-200: hsl(212, 45%, 89%);
+  --clr-blue-200: hsl(220, 15%, 55%);
+  --clr-blue-800: hsl(218, 44%, 22%);
+  --fw-400: 400;
+  --fw-700: 700;
 }
 
 /* Box sizing rules */
 *,
 *::before,
 *::after {
-    box-sizing: border-box;
+  box-sizing: border-box;
 }
 
 /* Remove default margin */
@@ -25,42 +25,42 @@ figure,
 blockquote,
 dl,
 dd {
-    margin: 0;
+  margin: 0;
 }
 
 /* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
 ul[role='list'],
 ol[role='list'] {
-    list-style: none;
+  list-style: none;
 }
 
 /* Set core root defaults */
 html:focus-within {
-    scroll-behavior: smooth;
+  scroll-behavior: smooth;
 }
 
 /* Set core body defaults */
 body {
-    display: grid;
-    justify-content: center;
-    align-content: center;
-    min-height: 100vh;
-    font-family: 'Outfit', sans-serif;
-    font-size: 1rem;
-    text-rendering: optimizeSpeed;
-    /*line-height: 1.5;*/
+  display: grid;
+  justify-content: center;
+  align-content: center;
+  min-height: 100vh;
+  font-family: 'Outfit', sans-serif;
+  font-size: 1rem;
+  text-rendering: optimizeSpeed;
+  /*line-height: 1.5;*/
 }
 
 /* A elements that don't have a class get default styles */
 a:not([class]) {
-    text-decoration-skip-ink: auto;
+  text-decoration-skip-ink: auto;
 }
 
 /* Make images easier to work with */
 img,
 picture {
-    max-width: 100%;
-    display: block;
+  max-width: 100%;
+  display: block;
 }
 
 /* Inherit fonts for inputs and buttons */
@@ -68,84 +68,84 @@ input,
 button,
 textarea,
 select {
-    font: inherit;
+  font: inherit;
 }
 
 /* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
 @media (prefers-reduced-motion: reduce) {
-    html:focus-within {
-        scroll-behavior: auto;
-    }
+  html:focus-within {
+    scroll-behavior: auto;
+  }
 
-    *,
-    *::before,
-    *::after {
-        animation-duration: 0.01ms !important;
-        animation-iteration-count: 1 !important;
-        transition-duration: 0.01ms !important;
-        scroll-behavior: auto !important;
-    }
+  *,
+  *::before,
+  *::after {
+    animation-duration: 0.01ms !important;
+    animation-iteration-count: 1 !important;
+    transition-duration: 0.01ms !important;
+    scroll-behavior: auto !important;
+  }
 }
 
 /* Composition */
 .flow > * + * {
-    margin-top: 1.1rem;
+  margin-top: 1.1rem;
 }
 
 /* Utilities */
 .bg-primary {
-    background-color: var(--clr-neutral-200);
+  background-color: var(--clr-neutral-200);
 }
 
 .bg-secondary {
-    background-color: var(--clr-neutral-100);
+  background-color: var(--clr-neutral-100);
 }
 
 .txt-primary {
-    color: var(--clr-blue-800);
+  color: var(--clr-blue-800);
 }
 
 .txt-secondary {
-    color: var(--clr-blue-200);
+  color: var(--clr-blue-200);
 }
 
 .txt-center {
-    text-align: center;
+  text-align: center;
 }
 
 /* Block */
 .card {
-    box-shadow: rgba(17, 12, 46, 0.15) 0 48px 100px 0;
-    border-radius: 1rem;
-    padding: 12px;
+  box-shadow: rgba(17, 12, 46, 0.15) 0 48px 100px 0;
+  border-radius: 1rem;
+  padding: 12px;
 }
 
 .card-content {
-    max-width: 230px;
+  max-width: 230px;
 }
 
 .card-content > img {
-    max-width: 100%;
-    height: auto;
-    border-radius: .5rem;
+  max-width: 100%;
+  height: auto;
+  border-radius: 0.5rem;
 }
 
-.card-content > div {
-    max-width: 90%;
-    margin-right: auto;
-    margin-bottom: 1rem;
-    margin-left: auto;
+.card-content > section {
+  max-width: 90%;
+  margin-right: auto;
+  margin-bottom: 1rem;
+  margin-left: auto;
 }
 
-.card-content > div > * {
-    text-align: center;
+.card-content > section > * {
+  text-align: center;
 }
 
 #card-title {
-    font-size: 1.1em;
-    margin-bottom: 13px;
+  font-size: 1.1em;
+  margin-bottom: 13px;
 }
 
 #card-text {
-    font-size: .75rem;
+  font-size: 0.75rem;
 }
