Remove unused CSS selectors

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,21 +17,8 @@ html {
 /* Remove default margin in favour of better control in authored CSS */
 body,
 h1,
-h2,
-h3,
-h4,
-p,
-figure,
-blockquote,
-dl,
-dd {
+p {
   margin: 0;
-}
-
-/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
-ul[role='list'],
-ol[role='list'] {
-  list-style: none;
 }
 
 /* Set core body defaults */
@@ -40,42 +27,14 @@ body {
 }
 
 /* Balance text wrapping on headings */
-h1,
-h2,
-h3,
-h4 {
+h1 {
   text-wrap: balance;
 }
 
-/* A elements that don't have a class get default styles */
-a:not([class]) {
-  text-decoration-skip-ink: auto;
-  color: currentColor;
-}
-
 /* Make images easier to work with */
-img,
-picture {
+img {
   max-width: 100%;
   display: block;
-}
-
-/* Inherit fonts for inputs and buttons */
-input,
-button,
-textarea,
-select {
-  font: inherit;
-}
-
-/* Make sure textareas without a rows attribute are not tiny */
-textarea:not([rows]) {
-  min-height: 10em;
-}
-
-/* Anything that has been anchored to should have extra scroll margin */
-:target {
-  scroll-margin-block: 5ex;
 }
 
 /* === END CSS RESET === */
@@ -89,7 +48,6 @@ body {
 }
 
 /* UTILITIES */
-
 .bg-white {
   background-color: hsl(0, 0%, 100%);
 }
